unpackaged/main/default/objects/SBQQ__Quote__c/fields/Cash_Discount_Override_Cable_Manage__c.field-meta.xml
<CustomField>
    <fullName>Cash_Discount_Override_Cable_Manage__c</fullName>
    <label>Cash Discount Override (Cable Manage)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>