unpackaged/main/default/objects/SBQQ__Quote__c/fields/Cash_Discount_Override_Conduit_Cable_Fit__c.field-meta.xml
<CustomField>
    <fullName>Cash_Discount_Override_Conduit_Cable_Fit__c</fullName>
    <label>Cash Discount Override (Conduit&amp;Cable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>