unpackaged/main/default/objects/SBQQ__Quote__c/fields/Cash_Discount_Override_PVC_Fittings__c.field-meta.xml
<CustomField>
    <fullName>Cash_Discount_Override_PVC_Fittings__c</fullName>
    <label>Cash Discount Override (PVC Fittings)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>