unpackaged/main/default/objects/SBQQ__Quote__c/fields/Cash_Discount_Override_Steel_Conduit__c.field-meta.xml
<CustomField>
    <fullName>Cash_Discount_Override_Steel_Conduit__c</fullName>
    <label>Cash Discount Override (Steel Conduit)</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>