unpackaged/main/default/objects/SBQQ__Quote__c/fields/Cash_Discount_PPC_Conduit__c.field-meta.xml
<CustomField>
    <fullName>Cash_Discount_PPC_Conduit__c</fullName>
    <label>Cash Discount (PPC Conduit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>