unpackaged/main/default/objects/SBQQ__Quote__c/fields/Cash_Discount_PST__c.field-meta.xml
<CustomField>
    <fullName>Cash_Discount_PST__c</fullName>
    <description>Calculated cash discounts for Powerstrut line items. Check OVERRIDE to manually adjust this amount.</description>
    <inlineHelpText>Calculated cash discounts for Powerstrut line items. Check OVERRIDE to manually adjust this amount.</inlineHelpText>
    <label>Cash Discount (PST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>