unpackaged/main/default/objects/SBQQ__Quote__c/fields/Co_Load_Email_Text__c.field-meta.xml
<CustomField>
    <fullName>Co_Load_Email_Text__c</fullName>
    <formula>IF(
  Co_Load_Quote__c = TRUE,
  &#39;CO-LOAD&#39;,
  NULL
)</formula>
    <label>Co-Load Email Text</label>
    <type>Text</type>
</CustomField>