unpackaged/main/default/objects/SBQQ__Quote__c/fields/Co_Load_Quote__c.field-meta.xml
<CustomField>
    <fullName>Co_Load_Quote__c</fullName>
    <formula>Business_Unit_Count__c &gt; 1</formula>
    <label>Co-Load Quote</label>
    <type>Checkbox</type>
</CustomField>