unpackaged/main/default/objects/SBQQ__Quote__c/fields/Conduit_Cable_Fittings_Quote_Lines__c.field-meta.xml
<CustomField>
    <fullName>Conduit_Cable_Fittings_Quote_Lines__c</fullName>
    <label>Conduit &amp; Cable Fittings Quote Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>