unpackaged/main/default/objects/SBQQ__Quote__c/fields/Conga_Trigger_Test__c.field-meta.xml
<CustomField>
    <fullName>Conga_Trigger_Test__c</fullName>
    <formula>HYPERLINK(&quot;/apex/APXTConga4__Conga_Composer?ServerURL=&quot;+ $Api.Partner_Server_URL_370 + Conga_Trigger_Formula__c ,&quot;Test Conga Trigger via User Interface&quot;)</formula>
    <label>Conga Trigger Test</label>
    <type>Text</type>
</CustomField>