unpackaged/main/default/objects/SBQQ__Quote__c/fields/Contractor_Name__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Name__c</fullName>
    <formula>SBQQ__Opportunity2__r.Contractor__r.Name</formula>
    <label>Contractor Name</label>
    <type>Text</type>
</CustomField>