unpackaged/main/default/objects/SBQQ__Quote__c/fields/Corrosion_Resistant_Conduit_Quote_Lines__c.field-meta.xml
<CustomField>
    <fullName>Corrosion_Resistant_Conduit_Quote_Lines__c</fullName>
    <label>Corrosion Resistant Conduit Quote Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>