unpackaged/main/default/objects/SBQQ__Quote__c/fields/Count_ALFITT_Quote_Lines__c.field-meta.xml
<CustomField>
    <fullName>Count_ALFITT_Quote_Lines__c</fullName>
    <description>Conduit &amp; Cable Fittings</description>
    <label>Count ALFITT Quote Lines</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>