unpackaged/main/default/objects/SBQQ__Quote__c/fields/Count_Cable_Management__c.field-meta.xml
<CustomField>
    <fullName>Count_Cable_Management__c</fullName>
    <label>Count Cable Management</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>