unpackaged/main/default/objects/SBQQ__Quote__c/fields/Count_Cope__c.field-meta.xml
<CustomField>
    <fullName>Count_Cope__c</fullName>
    <label>Count Cope</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>