unpackaged/main/default/objects/SBQQ__Quote__c/fields/Count_ECN_Quote_Lines__c.field-meta.xml
<CustomField>
    <fullName>Count_ECN_Quote_Lines__c</fullName>
    <label>Count ECN Quote Lines</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>