unpackaged/main/default/objects/SBQQ__Quote__c/fields/Count_FRE__c.field-meta.xml
<CustomField>
    <fullName>Count_FRE__c</fullName>
    <label>Count FRE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>