unpackaged/main/default/objects/SBQQ__Quote__c/fields/Count_of_Expired_Lines__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Expired_Lines__c</fullName>
    <label>Count of Expired Lines</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>