unpackaged/main/default/objects/SBQQ__Quote__c/fields/Count_PVCCON_Quote_Lines__c.field-meta.xml
<CustomField>
    <fullName>Count_PVCCON_Quote_Lines__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count PVCCON Quote Lines</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>