unpackaged/main/default/objects/SBQQ__Quote__c/fields/CPQ_Stock_Quote__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Stock_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPQ Stock Quote</label>
    <referenceTo>CPQ_Stock_Quote__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>