unpackaged/main/default/objects/SBQQ__Quote__c/fields/CRC_Cash_Discount_Override__c.field-meta.xml
<CustomField>
    <fullName>CRC_Cash_Discount_Override__c</fullName>
    <label>CRC Cash Discount Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>