unpackaged/main/default/objects/SBQQ__Quote__c/fields/CRC_Freight_Override__c.field-meta.xml
<CustomField>
    <fullName>CRC_Freight_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRC Freight Override</label>
    <type>Checkbox</type>
</CustomField>