unpackaged/main/default/objects/SBQQ__Quote__c/fields/Current_Cost_Aluminum_Conduit_Fittings__c.field-meta.xml
<CustomField>
    <fullName>Current_Cost_Aluminum_Conduit_Fittings__c</fullName>
    <label>Material Cost (Aluminum Conduit&amp;Fittings</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>