unpackaged/main/default/objects/SBQQ__Quote__c/fields/Current_Cost_Cable_Manage__c.field-meta.xml
<CustomField>
    <fullName>Current_Cost_Cable_Manage__c</fullName>
    <label>Material Cost (Cable Management)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>