unpackaged/main/default/objects/SBQQ__Quote__c/fields/Current_Cost_Metal_FramingNA__c.field-meta.xml
<CustomField>
    <fullName>Current_Cost_Metal_FramingNA__c</fullName>
    <label>Materia Cost Metal Framing North America</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>