unpackaged/main/default/objects/SBQQ__Quote__c/fields/Current_Cost_PPC_Fittings__c.field-meta.xml
<CustomField>
    <fullName>Current_Cost_PPC_Fittings__c</fullName>
    <label>Material Cost, PPC Fittings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>