unpackaged/main/default/objects/SBQQ__Quote__c/fields/Current_Cost_PVC_Water_Pipe__c.field-meta.xml
<CustomField>
    <fullName>Current_Cost_PVC_Water_Pipe__c</fullName>
    <label>Material Cost (PVC Water Pipe)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>