unpackaged/main/default/objects/SBQQ__Quote__c/fields/Current_Cost_Steel_Conduit__c.field-meta.xml
<CustomField>
    <fullName>Current_Cost_Steel_Conduit__c</fullName>
    <label>Material Cost (Steel Conduit)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>