unpackaged/main/default/objects/SBQQ__Quote__c/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <label>Customer Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>