unpackaged/main/default/objects/SBQQ__Quote__c/fields/Date_of_Quotation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Quotation__c</fullName>
    <label>Date of Quotation</label>
    <type>Date</type>
</CustomField>