unpackaged/main/default/objects/SBQQ__Quote__c/fields/Days_to_Expire_Conduit_Cable_Fittings__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Expire_Conduit_Cable_Fittings__c</fullName>
    <label>Days to Expire (Conduit&amp;Cable Fittings)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>