unpackaged/main/default/objects/SBQQ__Quote__c/fields/Days_to_Expire_ECFC__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Expire_ECFC__c</fullName>
    <label>Days to Expire (ECFC)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>