unpackaged/main/default/objects/SBQQ__Quote__c/fields/Days_to_Expire_ECN__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Expire_ECN__c</fullName>
    <label>Days to Expire (ECN)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>