unpackaged/main/default/objects/SBQQ__Quote__c/fields/Days_to_Expire_PVC_Water_Pipe__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Expire_PVC_Water_Pipe__c</fullName>
    <label>Days to Expire (PVC Water Pipe)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>