unpackaged/main/default/objects/SBQQ__Quote__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Lead Time Comments, Shipping Location, &amp; Additional Notes</inlineHelpText>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>