unpackaged/main/default/objects/SBQQ__Quote__c/fields/ECFC_Max_Multiplier_Variance__c.field-meta.xml
<CustomField>
    <fullName>ECFC_Max_Multiplier_Variance__c</fullName>
    <label>ECFC Max Multiplier Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>