unpackaged/main/default/objects/SBQQ__Quote__c/fields/EditLinesFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>EditLinesFieldSetName__c</fullName>
    <formula>IF( 
    TEXT(SBQQ__Opportunity2__r.Product_Category__c) = &#39;Cable Management&#39;,
    &#39;Cable_Management&#39;,
    &#39;Pricing_Managers&#39;
)</formula>
    <label>EditLinesFieldSetName</label>
    <type>Text</type>
</CustomField>