unpackaged/main/default/objects/SBQQ__Quote__c/fields/Effective_Submitted_For_Review_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Effective_Submitted_For_Review_Date_Time__c</fullName>
    <formula>IF(
TIMEVALUE(MID(TEXT(Submitted_For_Review_Date_Time__c),12,8) &amp; &quot;.000&quot;) &lt; TIMEVALUE(&#39;13:00:00.000&#39;),
DATETIMEVALUE( LEFT(TEXT(Submitted_For_Review_Date_Time__c),10) &amp; &#39; 13:00:00&#39;),
Submitted_For_Review_Date_Time__c
)</formula>
    <label>Effective Submitted For Review Date/Time</label>
    <type>DateTime</type>
</CustomField>