unpackaged/main/default/objects/SBQQ__Quote__c/fields/Elec_Cable_Flexible_Con_Quote_Lines__c.field-meta.xml
<CustomField>
    <fullName>Elec_Cable_Flexible_Con_Quote_Lines__c</fullName>
    <label>Elec Cable Flexible Con Quote Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>