unpackaged/main/default/objects/SBQQ__Quote__c/fields/Exclude_From_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude From Reporting</label>
    <type>Checkbox</type>
</CustomField>