unpackaged/main/default/objects/SBQQ__Quote__c/fields/Expires_On_Metal_Framing__c.field-meta.xml
<CustomField>
    <fullName>Expires_On_Metal_Framing__c</fullName>
    <formula>IF(
  NOT( ISBLANK( Override_Expiration__c ) ),
  Override_Expiration__c,
  BLANKVALUE( Approved_Date__c, TODAY() ) +  Days_to_Expire_Metal_Framing__c
)</formula>
    <label>Expires On (Metal Framing)</label>
    <type>Date</type>
</CustomField>