unpackaged/main/default/objects/SBQQ__Quote__c/fields/FOB_Point_of_Shipment__c.field-meta.xml
<CustomField>
    <fullName>FOB_Point_of_Shipment__c</fullName>
    <label>FOB Point of Shipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>United States</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>