unpackaged/main/default/objects/SBQQ__Quote__c/fields/FOB_Select__c.field-meta.xml
<CustomField>
    <fullName>FOB_Select__c</fullName>
    <label>FOB Select</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FOB Factory.</fullName>
            </value>
            <value>
                <fullName>FOB Shipping Point - prepaid and charged.</fullName>
            </value>
            <value>
                <fullName>FOB Warehouse.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>