unpackaged/main/default/objects/SBQQ__Quote__c/fields/FRE_minimum_multiplier__c.field-meta.xml
<CustomField>
    <fullName>FRE_minimum_multiplier__c</fullName>
    <label>FRE minimum multiplier</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>