unpackaged/main/default/objects/SBQQ__Quote__c/fields/Freight_Adder_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Freight_Adder_Adjustment__c</fullName>
    <label>Freight Adder Adjustment</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>