unpackaged/main/default/objects/SBQQ__Quote__c/fields/Freight_Adder_Groups_to_Adjust__c.field-meta.xml
<CustomField>
    <fullName>Freight_Adder_Groups_to_Adjust__c</fullName>
    <label>Freight Adder Groups to Adjust</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SRP9_Codes</valueSetName>
    </valueSet>
</CustomField>