unpackaged/main/default/objects/SBQQ__Quote__c/fields/Freight_Adder_Steel_Conduit__c.field-meta.xml
<CustomField>
    <fullName>Freight_Adder_Steel_Conduit__c</fullName>
    <label>Freight Adder (Steel Conduit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>