unpackaged/main/default/objects/SBQQ__Quote__c/fields/Freight_Cost_PVC_Water_Pipe__c.field-meta.xml
<CustomField>
    <fullName>Freight_Cost_PVC_Water_Pipe__c</fullName>
    <label>Freight Cost (PVC Water Pipe)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>