unpackaged/main/default/objects/SBQQ__Quote__c/fields/Freight_Override_Aluminum_Conduit_Fittin__c.field-meta.xml
<CustomField>
    <fullName>Freight_Override_Aluminum_Conduit_Fittin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freight Override (Aluminum Conduit&amp;Fit)</label>
    <type>Checkbox</type>
</CustomField>