unpackaged/main/default/objects/SBQQ__Quote__c/fields/Freight_Override_Cable_Manage__c.field-meta.xml
<CustomField>
    <fullName>Freight_Override_Cable_Manage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freight Override (Cable Management)</label>
    <type>Checkbox</type>
</CustomField>