unpackaged/main/default/objects/SBQQ__Quote__c/fields/Freight_Override_Conduit_Cable_Fitting__c.field-meta.xml
<CustomField>
    <fullName>Freight_Override_Conduit_Cable_Fitting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freight Override (Conduit &amp; Cable Fit)</label>
    <type>Checkbox</type>
</CustomField>