unpackaged/main/default/objects/SBQQ__Quote__c/fields/Freight_Override_ECN__c.field-meta.xml
<CustomField>
    <fullName>Freight_Override_ECN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freight Override (ECN)</label>
    <type>Checkbox</type>
</CustomField>