unpackaged/main/default/objects/SBQQ__Quote__c/fields/Freight_Override_Metal_Framing__c.field-meta.xml
<CustomField>
    <fullName>Freight_Override_Metal_Framing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freight Override (Metal Framing)</label>
    <type>Checkbox</type>
</CustomField>